# kviolet

./: .clang-format  .gitignore  .gitmodules  README.md  compile.sh  compile_3rdparty.sh  compile_android.sh  compile_cross.sh  compile_cross_3rdparty.sh  compile_cross_linxu_tools.sh  compile_linux.sh  compile_linux_3rd.sh  compile_linux_3rdparty.sh  compile_rk3308.sh  compile_toolkit.sh  install_env_centos.sh  install_env_ubuntu.sh  main.txt
cmake/check/: CheckBuildType.cmake  CheckCompiler.cmake  CheckGlobalType.cmake  CheckInstallPrefix.cmake  CheckPlatform.cmake  CheckSystem.cmake
cmake/traverse/: TraverseCMakeLists.cmake  TraverseInclude.cmake  TraverseInstall.cmake  TraverseLibrary.cmake  TraverseSource.cmake
cmakemoudes/: h3_r258.cmake  linaro_arm.cmake  rk3568.cmake
doc/: 地址
kviolet/: CMakeLists.txt
kviolet/cmake/check/: CheckBuildType.cmake  CheckCompiler.cmake  CheckInstallPrefix.cmake  CheckSystem.cmake
kviolet/cmake/traverse/: TraverseInclude.cmake  TraverseInstall.cmake
kviolet/kviolet/: CMakeLists.txt  kviolet.h
kviolet/kviolet/actor/: active.cpp  active.h  actor.h  actorface.h  event.cpp  lockqueue.h  statemachine.h
kviolet/kviolet/common/: define.h  definecpp.h  procotol.h
kviolet/kviolet/efficient/: efficient.h
kviolet/kviolet/kmessage/: builder_base.cpp  looper.cpp  message.h  message_builder.cpp  message_builder.h  message_dispatcher.cpp  message_queue.h
kviolet/kviolet/lock_container/: lock_container.h  lock_event.cpp  lock_event.h  lock_list.h  lock_map.cpp  lock_map.h
kviolet/kviolet/message_queue/: builder.h  looper.h  message.cpp  message.h  message_queue.cpp  message_queue.h
kviolet/kviolet/module/: module.cpp  singleton.h
kviolet/kviolet/system/: process.cpp  system.h
kviolet/kviolet/timer/: manager.h  timer.h
kviolet/kviolet/utilities/: filesystem.cpp  math.h  net.cpp  net.h  string.cpp  timestamp.cpp
kviolet/kviolet_enckit/dbus/: dbus_client.cpp  dbus_server.cpp  dbus_server.h
kviolet/kviolet_enckit/fmt/: format.h
kviolet/kviolet_enckit/grpc/: grpc_server_loop.h
kviolet/kviolet_enckit/http_client/: http_client.cpp  http_client.h
kviolet/kviolet_enckit/speaker_gst/: speaker_gst.h
kviolet/kviolet_enckit/speaker_pulseaudio/: speaker_pulseaudio.cpp  speaker_pulseaudio.h
kviolet/kviolet_test/: CMakeLists.txt  main.cpp
kviolet/kviolet_test/generic_plug/: plug_instance.cpp  plug_instance.h
kviolet/project/: CMakeLists.txt
kviolet/project/kviolet/: CMakeLists.txt  kviolet.h
kviolet/software/: CMakeLists.txt
kviolet/software/enckit_test/: CMakeLists.txt  main.cpp
kviolet/software/tool_test/: CMakeLists.txt  main.cpp
kviolet/source/actor/: active.h  event.h  handle.cpp  hsm.cpp  queue.h
kviolet/source/common/: common.h  define.h  include.h  support.h
kviolet/source/debug/: debug.cpp  debug.h
kviolet/source/efficient/: annularcache.cpp  efficient.h  instwlinklist.cpp  instwlinklist.h  queue.h  stack.cpp  stack.h
kviolet/source/lock_container/: lock_event.cpp  lock_queue.h
kviolet/source/message_queue/: builder.cpp  message.cpp  message_dispatcher.h
kviolet/source/module/: module.h  plug_base.cpp  plug_base_factory.h  singleton.cpp  singleton.h
kviolet/source/utilities/: filesystem.h  math.h  serialize.cpp  serialize.h  string.h  time.h  utilities.h
kviolet_3rd/: CMakeLists.txt
kviolet_3rd/cmake/check/: CheckCompiler.cmake
kviolet_3rd/cmake/traverse/: TraverseInstall.cmake  TraverseSourceGroup.cmake
kviolet_3rd/project/kviolet_3rd/: CMakeLists.txt  kviolet_3rd.h
kviolet_enckit/: CMakeLists.txt
kviolet_enckit/cmake/check/: CheckBuildType.cmake  CheckGlobalType.cmake
kviolet_enckit/cmake/traverse/: TraverseLibrary.cmake  TraverseSet.cmake  TraverseSource.cmake
kviolet_enckit/enckit/: CMakeLists.txt  kviolet_enckit.h
kviolet_enckit/enckit/dbus/: dbus_server.cpp
kviolet_enckit/enckit/fmt/: format.h
kviolet_enckit/enckit/speaker_gst/: speaker_gst.cpp  speaker_gst.h
kviolet_enckit/enckit/speaker_pulseaudio/: speaker_pulseaudio.cpp  speaker_pulseaudio.h
kviolet_enckit/source/dbus/: dbus_client.h
kviolet_enckit/source/grpc/: grpc_server.cpp  grpc_server_loop.h
kviolet_enckit/source/speaker_pulseaudio/: speaker_pulseaudio.cpp  speaker_pulseaudio.h
linux_crosss_env/: environment-setup.linaro_arm.sh  environment-setup.rk3568.sh  linaro_arm.cmake  rk3568.cmake
patches/: dbus-cpp.patch  dbus-cpp.patche  grpc_h3_r258.patch  libcanard.patch
software/: CMakeLists.txt
software/cmake/check/: CheckBuildType.cmake  CheckCompiler.cmake  CheckInstallPrefix.cmake  CheckSystem.cmake
software/project/: CMakeLists.txt
software/project/kviolet_work_test/: CMakeLists.txt  main.cpp
software/project/pulseaudio_test/: CMakeLists.txt  main.cpp
softwore/: CMakeLists.txt
softwore/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
softwore/project/: CMakeLists.txt
toolkit/kviolet/: CMakeLists.txt
toolkit/kviolet/kviolet_test/: CMakeLists.txt  can_tool_send.cpp
toolkit/kviolet/source/: CMakeLists.txt  kviolet.h
toolkit/kviolet/source/actor/: handle.h  hsm.h  queue.cpp
toolkit/kviolet/source/debug/: debug.h
toolkit/kviolet/source/efficient/: annularcache.h  queue.cpp  twlinklist.cpp  twlinklist.h
toolkit/kviolet/source/lock_container/: lock_list.cpp  lock_list.h  lock_map.h  lock_queue.cpp
toolkit/kviolet/source/message_queue/: builder.h  handler.h  looper.cpp  message.h  message_queue.cpp  message_queue.h
toolkit/kviolet/source/module/: plug_base.h  plug_base_factory.cpp
toolkit/kviolet/source/net/: net.h
toolkit/kviolet/source/poll/: poll.h
toolkit/kviolet/source/system/: process.h  system.h
toolkit/kviolet/source/timer/: node.cpp  node.h
toolkit/kviolet/source/utilities/: filesystem.cpp  filesystem.h  math.cpp  net.h  string.cpp  time.cpp  utilities.h
toolkit/kviolet_enckit/source/: CMakeLists.txt  kviolet_enckit.h
toolkit/kviolet_enckit/source/dbus/: dbus_server.h
toolkit/kviolet_enckit/source/fmt/: format.h
toolkit/kviolet_enckit/source/grpc/: grpc_server.h
toolkit/kviolet_enckit/source/speaker_gst/: speaker_gst.cpp  speaker_gst.h
(+112 files in other folders)
